CVS code -
- configure.in:
	- Autoconf compatibility fixes (Pavel Roskin)
- cut.c:
  do_cut_text()
	- marked text cut fixes (Rocco) (Fixes bug #54).
- hu.po:
	- Hungarian translation by Horvath Szabolcs.

nano-0.9.99pre2 - 01/31/2001
General
	- Removed center_x and center_y globals.  center_y was
	  completely unused and center_x was only used a few places,
	  easily replaced with COLS / 2 (oops, not current_x & y (Rob)).
	- Deleted free_node, duplicate of delete_node, and changed all
	  free_node calls to delete_node.
	- Fix for resizing the window in modes other than normal edit mode 
	  Changes to handle_sigwinch(), main().  Fixes bug #52 (Rocco).
- files.c:
  write_file()
	- Don't free() realname on error, if it needs to be free()d later
	  it will be (fixes crash on successful write after failed write,
	  discovered by David Sobon).
  username_tab_completion()
	- Optimization and removal of useless vars (Rocco).
	- Rewritten using getpwent (suggested by Rocco).
	- Removed redundant conditional (Rocco).
  real_dir_from_tilde()
	- Rewritten using getpwent (suggested by Adam, much optimized by Rocco).
- global.c:
	- Don't define toggles global or toggle_init_one if using --tiny.
- nano.c:
  do_justify()
	- Added restoration of totsize after unjustify command.
  usage()
	- Add arg to -T help (Rocco).
  global_init(), handle_sigwinch()
	- Messy loops replaced with memset calls (Rocco).
  do_alt_speller()
	- Added code to parse multi-word alt_speller strings.
	- Fix initialization before fork()  (Rocco).
- proto.h:
	- Fix do_credits() proto (oops!)
- winio.c:
  nanogetstr()
	- Sanity check for x overrunning the string buffer len.

nano 0.9.99pre1 - 01/17/2001
General
	- Changed #ifdefs to check for both DISABLE_TABCOMP and
	  NANO_SMALL, makes tiny option leave out tab completion, which
	  should be left out in that circumstance.  Saves at least 5k.
	- Previous change to #ifdefs DISABLE_TABCOMP and NANO_SMALL rolled
	  back. (Rocco)